feat(ghost): Implement Lockbox authentication (Phase 2)

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ VITE_ENABLE_AUTH=false
 # Sanity CMS
 VITE_SANITY_PROJECT_ID=
 VITE_SANITY_DATASET=production
+
+# Ghost Mode
+VITE_GHOST_SECRET_KEY=
